--- a/benefits.html
+++ b/benefits.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benefits & Disadvantages</title>
+  <title>Advantages & Disadvantages</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Benefits & Disadvantages of Plastic</h1>
+    <h1>Advantages & Disadvantages</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -22,17 +22,29 @@
   </header>
 
   <section>
-    <h2>Benefits</h2>
+    <h1>Advantages of Plastic</h1>
+    <h2></h2>
     <p>
-      Plastic was initially seen as a miracle material – lightweight, durable, waterproof, cheap, and versatile. 
-      It was used in packaging, healthcare (syringes, gloves), electronics, transportation, and food storage.
+        <br>
+        <b>Affordable and Lightweight:</b> Plastic is a more affordable and lighter alternative to many natural materials.<br><br>
+        <b>Versatile and Moldable:</b> The name "PLASTIC" comes from the Greek word "plastikos" meaning "capable of being molded or shaped."<br>
+        This unique property allows it to be formed into various shapes, making it useful for countless applications.<br><br>
+        <b>Strong and Durable:</b> During World War II, plastic was a durable, heat-resistant, and electrical-insulating substitute for scarce metals, proving to be a cheap, lightweight, and strong material.<br><br>
+        <b>Durable:</b> It was used in essential items like telephones, radios, and electrical appliances.
     </p>
 
-    <h2>How Benefits Turned Into Disadvantages</h2>
+    <br>
+
+    <h1>Disadvantages of Plastic</h1>
+    <h2></h2>
     <p>
-      Over the years, these benefits turned into disadvantages due to overproduction, single-use culture, and lack of recycling. 
-      Plastic that was once helpful is now polluting air, water, and soil, and entering human bodies as microplastics.
+        <br>
+        <b>Environmental Pollution:</b> Plastic waste has become a global crisis. It harms marine life, pollutes soil and rivers, and clogs drinking water sources.<br><br>
+        <b>Harm to Human Health:</b> Plastics release harmful chemicals, such as BPA and phthalates, which can enter our food and water.<br>
+        Diseases linked with plastic exposure include cancer, respiratory issues, hormonal imbalance, and digestive problems.<br><br>
+        <b>Non-Biodegradable:</b> Unlike natural materials, plastic does not break down easily and can remain in the environment for centuries.
     </p>
+
   </section>
 
   <footer>
@@ -40,3 +52,4 @@
   </footer>
 </body>
 </html>
+
