--- a/environment.html
+++ b/environment.html
@@ -22,17 +22,32 @@
   </header>
 
   <section>
-    <h2>Plastic Pollution in Nature</h2>
-    <p>
-      Plastic waste has become a global crisis. Animals, birds, cows, and fish often mistake plastic for food. 
-      Marine life is severely affected – turtles eat plastic bags, fish consume microplastics, and birds choke on small particles. 
-      Soil and rivers are clogged with plastic waste, reducing fertility and polluting drinking water sources. 
-      Each year millions of tons of plastic enter oceans, harming biodiversity and threatening ecosystems.
-    </p>
+ <img src="assets/images/ensea.jpg" alt="Plastic Pollution" style="width: 20%; display: block; margin: 0 auto;">
+
+
+     <h2><b>The Widespread Environmental Crisis of Plastic</b></h2>
+        <p>
+            Plastic pollution has escalated into a global environmental crisis, largely due to its defining characteristic: <b>non-biodegradability</b>. Unlike organic materials that break down naturally over time, plastic persists in the environment for hundreds, if not thousands, of years. This incredible durability, once seen as an advantage, is now the source of its most significant harm. When discarded, plastic waste does not disappear; it simply fractures into increasingly smaller fragments. These tiny particles, known as <b>microplastics</b> (less than 5mm in size) and even smaller <b>nanoplastics</b>, infiltrate every corner of our planet, from the deepest ocean trenches to the highest mountain peaks. This relentless fragmentation means that plastic pollution is not a localized issue but a pervasive contamination that saturates our ecosystems. The presence of these minuscule particles in soil, air, and water fundamentally disrupts natural cycles and poses an unprecedented threat to the delicate balance of life on Earth. The sheer volume of plastic produced each year, exceeding 400 million tonnes, far outstrips our ability to manage it effectively, leading to a relentless and ever-growing accumulation of waste in our natural world. This constant influx of plastic waste creates a permanent and visible scar on our planet, transforming pristine landscapes and waterways into dumping grounds.<br><br>
+        </p>
+<img src="assets/images/envir.jpg" alt="Plastic Pollution" style="width: 20%; display: block; margin: 0 auto;">
+
+
+
+        <h3><b>Devastating Impact on Animals and Marine Life</b></h3>
+        <p>
+            The physical and chemical properties of plastic make it a deadly hazard for wildlife, with a particularly devastating effect on marine creatures. Animals frequently mistake plastic debris for food, leading to internal injuries, blockages in their digestive systems, and eventual <b>starvation</b>. For example, <b>sea turtles</b> often consume plastic bags, tragically mistaking them for jellyfish, a staple of their diet. Similarly, birds, fish, and marine mammals ingest everything from bottle caps to fishing nets, which fills their stomachs and prevents them from absorbing the nutrients they need to survive. The oceans are choking on plastic, with millions of tons entering the water each year, forming massive <b>garbage patches</b> that swirl in major ocean currents. These patches are not just unsightly; they are deadly traps that entangle and <b>suffocate</b> a wide variety of marine species, from small fish to large whales. Beyond ingestion, the very presence of plastic in marine environments facilitates the spread of invasive species and harmful pathogens on its surface, further disrupting fragile ecosystems and threatening biodiversity on a global scale. The consequences of this pollution are not confined to a single species or region but threaten the entire web of marine life.<br><br>
+        </p>
+<img src="assets/images/envpe.jpg" alt="Plastic Pollution" style="width: 20%; display: block; margin: 0 auto;">
+
+
+        <h3><b>Contamination of Soil and Water Resources</b></h3>
+        <p>
+            Plastic pollution extends far beyond the oceans, profoundly impacting terrestrial and freshwater ecosystems. On land, plastic waste suffocates the soil, reducing its <b>fertility</b> and hindering plant growth. As plastic bags, bottles, and packaging accumulate in landfills and on the ground, they release harmful chemicals and <b>toxic additives</b> into the surrounding soil. When rain falls, these toxins leach into the earth and seep into groundwater, contaminating vital <b>water sources</b> for both humans and wildlife. In rivers and lakes, plastic waste acts as a physical barrier, clogging <b>drainage systems</b> and leading to an increased risk of severe flooding, which in turn spreads the pollution to new areas. The problem is exacerbated by the vast range of plastic types, often referred to as "<b>poly</b> things," such as <b>polyethylene (PE)</b>, <b>polypropylene (PP)</b>, and <b>polyethylene terephthalate (PET)</b>. These polymers are used in countless everyday items, from plastic bags to beverage bottles, and their low recycling rates ensure that a significant portion of this waste ends up in the environment. This persistent contamination of soil and water resources poses a long-term threat to agriculture, public health, and the overall stability of our natural environment, leaving a toxic legacy for future generations.<br><br>
+        </p>
   </section>
 
   <footer>
-    <p> Rgc Plastic Awareness Campaign</p>
+    <p> RGC Plastic Awareness Campaign</p>
   </footer>
 </body>
 </html>
