--- a/health.html
+++ b/health.html
@@ -4,7 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Impact on Human Health</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"><style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 12px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+            font-weight: bold;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        p {
+            margin-bottom: 20px;
+            text-align: justify;
+        }
+    </style>
+
 </head>
 <body>
   <header>
@@ -22,22 +52,72 @@
   </header>
 
   <section>
-    <h2>Diseases Caused by Plastic</h2>
+<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1px;">
+            <h2><b>Plastic and Human Health Problems</b></h2>
+            <div style="display: flex; gap: 1px;">
+                <img src="assets/images/humanliver.jpg" alt="Plastic Pollution" style="width: 100px; height: auto;">
+                <img src="assets/images/humanlung.jpg" alt="Plastic Pollution" style="width: 100px; height: auto;">
+            </div>
+        </div>
+  
+   
+
+
     <p>
-      Plastics release harmful chemicals like BPA and phthalates which enter our food and water. Microplastics are now found in the human body, 
-      including lungs and blood. Diseases linked with plastic exposure include:
+        Here is a table summarizing the major health problems caused by plastic and the ways in which they occur. These issues arise primarily from the toxic chemicals present in plastics and the physical dangers posed by microplastics.
     </p>
-    <ul>
-      <li><b>Cancer risk</b> due to toxic chemicals</li>
-      <li><b>Respiratory issues</b> from burning plastic fumes</li>
-      <li><b>Hormonal imbalance</b> in children and adults</li>
-      <li><b>Immune system weakening</b></li>
-      <li><b>Digestive problems</b> as microplastics enter food chain</li>
-    </ul>
+
+    <table style="width:100%;" border="1">
+        <thead>
+            <tr>
+                <th><b>Health Problem</b></th>
+                <th><b>How it is Caused</b></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><b>Hormonal Imbalances</b></td>
+                <td>
+                    This is caused by chemicals like <b>BPA (Bisphenol A)</b> and <b>phthalates</b>, which are known as endocrine disruptors. They mimic natural hormones, especially estrogen, and interfere with the body's endocrine system. This can lead to problems with puberty, fertility, and reproductive health.
+                </td>
+            </tr>
+            <tr>
+                <td><b>Cancer Risk</b></td>
+                <td>
+                    Many plastic additives are classified as <b>carcinogens</b>. Chronic exposure to these toxic substances, which can leach into food and water, can cause cell and DNA damage, increasing the risk of cancers such as breast, prostate, and liver cancer.
+                </td>
+            </tr>
+            <tr>
+                <td><b>Respiratory Issues</b></td>
+                <td>
+                    Inhalation of toxic fumes and particles from plastic manufacturing or the burning of plastic waste can lead to severe respiratory problems, including <b>asthma</b> and other lung diseases.
+                </td>
+            </tr>
+            <tr>
+                <td><b>Immune System Weakening</b></td>
+                <td>
+                    Exposure to chemicals like BPA and phthalates can compromise the body's immune system, making individuals more susceptible to infections and diseases. This can also lead to chronic inflammation.
+                </td>
+            </tr>
+            <tr>
+                <td><b>Digestive Problems</b></td>
+                <td>
+                    The ingestion of <b>microplastics</b> can cause physical damage to the walls of the digestive tract. These tiny particles can also disrupt the gut microbiome and cause inflammation, leading to conditions like irritable bowel syndrome (IBS).
+                </td>
+            </tr>
+            <tr>
+                <td><b>Cardiovascular & Neurological Risks</b></td>
+                <td>
+                    Tiny <b>nanoplastics</b> can enter the bloodstream and travel to vital organs like the heart and brain. Their presence has been linked to a higher risk of heart attack, stroke, and other cardiovascular diseases due to the inflammation they can cause in blood vessels.
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
   </section>
 
   <footer>
-    <p> Rgc Plastic Awareness Campaign</p>
+    <p> RGC Plastic Awareness Campaign</p>
   </footer>
 </body>
 </html>
