--- a/benefits.html
+++ b/benefits.html
@@ -66,7 +66,8 @@
   </section>
 
   <footer>
-    <p> Rgc Plastic Awareness Campaign</p>
+    <p> RGC Plastic Awareness Campaign</p>
   </footer>
 </body>
 </html>
+
